# cifar10

./: .stestr.conf  Jenkinsfile  README.md  setup.cfg
cifar10/models/: deepaas_api.py
cifar10/tests/: test_unit_model.py
docs/: conf.py
notebooks/: 1.0-cifar10_start.py2.ipynb  1.0-cifar10_start.py3.ipynb
